# AlitaAi

./: .gitignore  README.md  mcp.json  pyproject.toml  requirements.txt
alita/: __init__.py  config.py  config.toml  langgraph_agent.py  main.py  mcp.json  mcp_client.py
alita/core/: __init__.py  coding_agent.py  execute_bash_command_tmux.py  utils.py
alita/core/events/: __init__.py  event_stream.py
alita/core/prompts/: coding_agent_prompt.py
alita/core/tools/: bash_observations.py  execute_bash_command_tmux.py  finish.py  finish_observations.py  think.py
alita/core/tools/files/: __init__.py  file_action_executor.py  file_observations.py  file_tools.py  observation.py  observation_types.py
alita/mcp/: mcp_client.py
alita/tests/: __init__.py  conftest.py
alita/tests/core/: test_coding_agent.py
alita/tools/runtime/local/: execute_bash_command_tmux.py  test.py
