[tool.poetry]
name = "alita"
version = "0.1.0"
description = "Alita - An AI coding agent project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "alita"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
pydantic = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
