[tool.poetry]
name = "alita"
version = "0.1.0"
description = "Alita - An AI coding agent project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "alita"}]

[tool.poetry.dependencies]

autogen = "^0.9.5"
autogen-core = "^0.6.0"
autogen-ext = "^0.6.0"
autogen-agentchat = "^0.6.0"
fastapi = "^0.100.0"
langchain = "^0.3.26"
langchain-openai = "^0.3.26"
libtmux = "^0.46.2"
openai = "^1.0.0"
pydantic = "^2.0.0"
python = ">=3.10.5,<3.14"
rich = "^14.0.0"
toml = "^0.10.2"
uvicorn = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.pytest.ini_options]
testpaths = ["alita/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=alita --cov-report=term-missing"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
